--- a/bai1.html
+++ b/bai1.html
@@ -16,10 +16,11 @@
     Công cha như núi Thái Sơn &#60
 </h1>
 <p>
-    Công cha như núi Thái Sơn , <br>
-    Nghĩa mẹ như nước trong nguồn chảy ra ,<br>
-    Một lòng thờ mẹ kính cha , <br>
-    Cho tròn chữ hiếu mới là đạo con .
+    thành viên nhóm :  <br>
+    Nguyễn Trọng Đức,<br>
+    Trần Phan  Anh <br>
+    Phạm Văn Đạt <br>
+    Phạm Quang Minh <br>
 </p>
 
 <hr allign="center" width="500px">
