them dktk va qlsv

--- a/bai1.html
+++ b/bai1.html
@@ -55,7 +55,7 @@ x<sub>1</sub><sup>2</sup> + 2*x *x + x<sub>2</sub><sup>2</sup>
     <li><a href="https://twitter.com/">e</a>
 </ul>
 
-<table border="10" >
+<table border="5" >
     <thead>
         <th>Number order</th>
         <th>Name</th>
@@ -85,6 +85,23 @@ x<sub>1</sub><sup>2</sup> + 2*x *x + x<sub>2</sub><sup>2</sup>
     </tfoot>
     
 </table>
+
+<style>
+    table {
+        background-color: rgb(255, 108, 108);
+        border-color: rgb(230, 15, 72);
+        margin: 20px;
+    }
+    td {
+        color: rgb(255, 255, 255);
+        text-align: center;
+        margin-block: 20px;
+    }
+    tr {
+        color: white;
+        text-align: center;
+    }
+</style>
 
 <img src="https://pbs.twimg.com/media/GA4p1eDaoAAkv9p?format=jpg&name=4096x4096" alt="Who know !?" width="700" height="700">
 
