--- a/qlsv.html
+++ b/qlsv.html
@@ -1,7 +1,8 @@
 <head>
     <title>Quản lý sinh viên</title>
 </head>
-<h2>QUẢN LÝ SINH VIÊN</h2>
+<body>
+    <h2>QUẢN LÝ SINH VIÊN</h2>
 <table border="1">
     <thead>
         <tr>
@@ -17,13 +18,13 @@
         </tr>
         <tr>
             <td>1</td>
-            <td>Trần Tiến Tài</td>
+            <td>Nguyễn Trọng Đức</td>
             <td>7</td>
             <td rowspan="2">Khá</td>
         </tr>
         <tr>
             <td>2</td>
-            <td>Phạm Mạnh Khoa</td>
+            <td>Phạm Quang Minh</td>
             <td>8</td>
         </tr>
         
@@ -32,13 +33,13 @@
         </tr>
         <tr>
             <td>3</td>
-            <td>Trần Văn Hưng</td>
+            <td>Trần Phan Anh</td>
             <td>5</td>
             <td>Trung bình</td>
         </tr>
         <tr>
             <td>4</td>
-            <td>Đỗ Đức Thành</td>
+            <td>Phạm Văn Đạt</td>
             <td>10</td>
             <td>Giỏi</td>
         </tr>
@@ -52,3 +53,25 @@
         </tfoot>
        
 </table>
+
+</body>
+
+
+<style>
+    table {
+        background-size: cover;
+        margin-left: 450px;
+        color: aliceblue;
+        font-size: 30px;   /* thay đổi kích thước chữ trong bảng */
+    }
+    h2 {
+        color: white;
+        background-size: cover;
+        margin-left: 550px;
+        font-size: 30px;   /* thay đổi kích thước chữ cho h2 */
+    }
+    body {
+        background-image: url(images/130487409_p0.jpg);
+        background-position: center;
+    }
+</style>
