--- a/qlsv.html
+++ b/qlsv.html
@@ -1,77 +1,10 @@
 <head>
     <title>Quản lý sinh viên</title>
+    <link rel="stylesheet" href="styles-qlsv.css">
 </head>
 <body>
-    <h2>QUẢN LÝ SINH VIÊN</h2>
-<table border="1">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Họ và tên</th>
-            <th>Điểm</th>
-            <th>Xếp loại</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td colspan="4">Khóa A</td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Nguyễn Trọng Đức</td>
-            <td>7</td>
-            <td rowspan="2">Khá</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Phạm Quang Minh</td>
-            <td>8</td>
-        </tr>
-        
-        <tr>
-            <td colspan="4">Khóa B</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Trần Phan Anh</td>
-            <td>5</td>
-            <td>Trung bình</td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>Phạm Văn Đạt</td>
-            <td>10</td>
-            <td>Giỏi</td>
-        </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="2">Tổng cộng</td>
-                <td>7.5</td>
-                <td>Khá</td>
-            </tr>
-        </tfoot>
-       
-</table>
+
 
 </body>
 
 
-<style>
-    table {
-        background-size: cover;
-        margin-left: 450px;
-        color: aliceblue;
-        font-size: 30px;   /* thay đổi kích thước chữ trong bảng */
-    }
-    h2 {
-        color: white;
-        background-size: cover;
-        margin-left: 550px;
-        font-size: 30px;   /* thay đổi kích thước chữ cho h2 */
-    }
-    body {
-        background-image: url(images/130487409_p0.jpg);
-        background-position: center;
-    }
-</style>
